minor. fixing the spacing between rows in the comic book/sketchbook.

--- a/_sass/minima/grid/_grid.scss
+++ b/_sass/minima/grid/_grid.scss
@@ -18,6 +18,10 @@
 		border: 1px solid #CCC;
 		margin-right: 0 !important;
 		padding: 10px;
+
+		.vj__grid__full {
+			margin-bottom: 2px;
+		}
 	}
 
 	.vj__comicbook__page:nth-child(even) {
